--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           <div class="login-page">
             <div class="form">
               <form class="register-form">
-                <input type="text" placeholder="email address" />
+                <input type="email" placeholder="email address" />
                 <input type="password" placeholder="password" />
-                <button>create</button>
+                <button id="btnRegister">create</button>
                 <p class="message">
                   Already registered? <a href="#">Sign In</a>
                 </p>
