--- a/index.html
+++ b/index.html
@@ -37,18 +37,19 @@
         </header>
           <div class="login-page">
             <div class="form">
-              <form class="register-form">
-                <input type="email" placeholder="email address" />
-                <input type="password" placeholder="password" />
+              <form action="#" class="register-form">
+                <input type="email" placeholder="email" name="email"/>
+                <input type="password" placeholder="password" name="password"/>
                 <button id="btnRegister">create</button>
                 <p class="message">
                   Already registered? <a href="#">Sign In</a>
                 </p>
               </form>
-              <form class="login-form">
-                <input type="email" placeholder="email" />
-                <input type="password" placeholder="password" />
-                <button>login</button>
+              <div class="errorContainer hide"></div>
+              <form action="#" class="login-form">
+                <input type="email" placeholder="email" name="email"/>
+                <input type="password" placeholder="password" name= "password"/>
+                <button class="loginButton" type="submit">login</button>
                 <p class="message">
                   Not registered? <a href="#">Create an account</a>
                 </p>
