Email and Google Authentication fixed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div id="app">
-      <header class="headerLogin">
+      <!-- <header class="headerLogin">
         <h1>Welcome to TimeTiger!</h1>
         <h2>TimeTiger is a time management app that helps you to manage your time and tasks.</h2>
         </header>
@@ -45,7 +45,6 @@
                   Already registered? <a href="#">Sign In</a>
                 </p>
               </form>
-              <div class="errorContainer hide"></div>
               <form action="#" class="login-form">
                 <input type="email" placeholder="email" name="email"/>
                 <input type="password" placeholder="password" name= "password"/>
@@ -55,8 +54,7 @@
                 </p>
               </form>
             </div>
-          </div>
-
+          </div> -->
     </div>
     <script src="https://kit.fontawesome.com/d39da6ad8a.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
